--- a/README
+++ b/README
@@ -1,11 +1,15 @@
-st - simple terminal
---------------------
+Victoriam7 build of st - simple terminal
+----------------------------------------
 st is a simple terminal emulator for X which sucks less.
 
 
 Requirements
 ------------
 In order to build st you need the Xlib header files.
+
+
+Patches
+-------
 
 
 Installation
