--- a/README
+++ b/README
@@ -10,6 +10,7 @@ In order to build st you need the Xlib header files.
 
 Patches
 -------
+fix-wide-glyph-truncation*
 
 
 Installation
@@ -36,3 +37,7 @@ Credits
 -------
 Based on Aurélien APTEL <aurelien dot aptel at gmail dot com> bt source code.
 
+
+Notes
+-----
+* https://gist.github.com/mohkale/75169f0a400e70d66097cd9f0e0c14e7
